creating session notes

--- a/4. Session Journal/Curse of Strahd Campaign/23-08-05 Session 3.md
+++ b/4. Session Journal/Curse of Strahd Campaign/23-08-05 Session 3.md
@@ -1,9 +1,15 @@
----
-tags: 
-  - area/dungeons-and-dragons
----
 # Preparation
-- How to get the players to the town of Barovia?
+
+## Death House
+```encounter
+creatures:
+- 3: [[swarm-of-rats, Swarm of Rat]]
+- 2: [[ghast, Ghast]]
+players: true
+```
+
+## Names
+[[04 Chapter-2 The Lands Of Barovia#^barovian-names]]
 
 ## Maps
 - Barovia
@@ -40,7 +46,13 @@ tags:
 	- Wants players to take Kolyan Indrovich to church for burial
 #### [Church](https://5etools.mysmarthome.space/adventure.html#cos,4,e5.%20church,0)
 - Donavich: acolyte. Prays night and day to the Morning Lord to save his son
-- Doru: Vampire Spawn. Brave enough to attack lone character. "I smell your blood!" Will try to avoid the party and attack 
+	- Donavich will try to lock the players in the basement for Doru to eat him.
+- Doru: Vampire Spawn. Brave enough to attack lone character. "I smell your blood!" Will try to avoid the party and attack
+```encounter
+players: true
+creatures:
+- [[Doru (COS),Doru]]
+```
 
 ### Events
 #### [Dream Pastries](https://5etools.mysmarthome.space/adventure.html#cos,4,dream%20pastries,0)
