--- a/3. The Party/2. Session Logs/2. Session Logs.md
+++ b/3. The Party/2. Session Logs/2. Session Logs.md
@@ -30,34 +30,12 @@ columns:
       task_hide_completed: true
       footer_type: none
       persist_changes: false
-  Party:
-    input: select
-    accessorKey: Party
-    key: Party
-    id: Party
-    label: Party
-    position: 2
-    skipPersist: false
-    isHidden: false
-    sortIndex: -1
-    width: 190
-    options:
-      - { label: "Curse of Strahd", value: "Curse of Strahd", color: "hsl(222, 95%, 90%)"}
-    config:
-      enable_media_view: true
-      link_alias_enabled: true
-      media_width: 100
-      media_height: 100
-      isInline: false
-      task_hide_completed: true
-      footer_type: none
-      persist_changes: false
   date:
     input: calendar
     accessorKey: date
     key: date
     id: date
-    label: date
+    label: Session Date
     position: 3
     skipPersist: false
     isHidden: false
@@ -78,7 +56,7 @@ columns:
     accessorKey: summary
     key: summary
     id: QuickNotes
-    label: summary
+    label: Summary
     position: 4
     skipPersist: false
     isHidden: false
@@ -94,6 +72,67 @@ columns:
       footer_type: none
       persist_changes: false
       wrap_content: true
+  fc-date:
+    input: text
+    accessorKey: fc-date
+    key: fc-date
+    id: fc-date
+    label: Start Date
+    position: 100
+    skipPersist: false
+    isHidden: false
+    sortIndex: -1
+    config:
+      enable_media_view: true
+      link_alias_enabled: true
+      media_width: 100
+      media_height: 100
+      isInline: false
+      task_hide_completed: true
+      footer_type: none
+      persist_changes: false
+  fc-end:
+    input: text
+    accessorKey: fc-end
+    key: fc-end
+    id: fc-end
+    label: End Date
+    position: 100
+    skipPersist: false
+    isHidden: false
+    sortIndex: -1
+    config:
+      enable_media_view: true
+      link_alias_enabled: true
+      media_width: 100
+      media_height: 100
+      isInline: false
+      task_hide_completed: true
+      footer_type: none
+      persist_changes: false
+  party:
+    input: select
+    accessorKey: party
+    key: party
+    id: Party
+    label: Party
+    position: 2
+    skipPersist: false
+    isHidden: false
+    sortIndex: -1
+    width: 190
+    options:
+      - { label: "Curse of Strahd", value: "Curse of Strahd", color: "hsl(222, 95%, 90%)"}
+    config:
+      enable_media_view: true
+      link_alias_enabled: true
+      media_width: 100
+      media_height: 100
+      isInline: false
+      task_hide_completed: true
+      footer_type: none
+      persist_changes: false
+      option_source: manual
 config:
   remove_field_when_delete_column: false
   cell_size: normal
